[gd_scene load_steps=11 format=3 uid="uid://1ea7lom23yoq"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_typlj"]
[ext_resource type="Texture2D" uid="uid://b8iy8vmrmyw24" path="res://Assets/13bios.png" id="2_ut4fo"]
[ext_resource type="AudioStream" uid="uid://pbdxnirplu7a" path="res://Assets/trois-gymnopedie-gymnopedie-no-1-erik-satie-351s-12664.mp3" id="3_d07c6"]
[ext_resource type="Shader" path="res://Scenes/overlay.gdshader" id="3_l861i"]
[ext_resource type="AudioStream" uid="uid://rjnrm1bdurps" path="res://Assets/wind__artic__cold-6195.mp3" id="4_8u8hi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3lple"]
radius = 7.81025

[sub_resource type="FastNoiseLite" id="FastNoiseLite_04np8"]
frequency = 1.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_d7rk3"]
width = 1920
height = 1080
noise = SubResource("FastNoiseLite_04np8")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s2c4i"]
shader = ExtResource("3_l861i")
shader_parameter/Transparency = 1.8
shader_parameter/Slow = 20.0
shader_parameter/Noise = SubResource("NoiseTexture2D_d7rk3")

[sub_resource type="CircleShape2D" id="CircleShape2D_qamj8"]
radius = 76.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_typlj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3lple")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_ut4fo")
hframes = 9
vframes = 9

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="ColorRect" type="ColorRect" parent="Camera2D/CanvasLayer"]
material = SubResource("ShaderMaterial_s2c4i")
custom_minimum_size = Vector2(2000, 2000)
layout_direction = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_qamj8")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_d07c6")
volume_db = -20.0
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_8u8hi")
volume_db = -10.0
autoplay = true

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="finished" from="AudioStreamPlayer2" to="." method="_on_audio_stream_player_2_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
